# lib-cppmisc

./: .clang_complete  .gitignore  CMakeLists.txt  Doxyfile.in  README.md
examples/: .clang_complete  CMakeLists.txt  README.md
examples/inc/: examples_version.hpp.in  tester_interface.hpp  version_tester.hpp
examples/src/: examples_version.cpp  main.cpp  tester_interface.cpp  version_tester.cpp
inc/: detrace.h  libcppmisc_version.h.in  macroversion.h
src/: libcppmisc_version.cpp  macroversion.cpp
